--- a/Streetview Journey 4/Streetview Journey 4/Streetview Journey 4.csproj
+++ b/Streetview Journey 4/Streetview Journey 4/Streetview Journey 4.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="System.Drawing.Common" Version="4.6.1" />
+    <PackageReference Include="TagLibSharp" Version="2.2.0" />
     <PackageReference Include="Xabe.FFmpeg" Version="3.5.0" />
   </ItemGroup>
 
