Cleaned up some code

--- a/Streetview Journey 4/Streetview Journey 4/Streetview Journey 4.csproj
+++ b/Streetview Journey 4/Streetview Journey 4/Streetview Journey 4.csproj
@@ -2,11 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>Streetview_Journey_4</RootNamespace>
+    <RootNamespace>StreetviewJourney</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <PlatformTarget>x64</PlatformTarget>
+    <DocumentationFile></DocumentationFile>
+    <Optimize>false</Optimize>
   </PropertyGroup>
 
   <ItemGroup>
