--- a/Streetview Journey 4/Streetview Journey 4/Streetview Journey 4.csproj
+++ b/Streetview Journey 4/Streetview Journey 4/Streetview Journey 4.csproj
@@ -3,6 +3,15 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>StreetviewJourney</RootNamespace>
+    <AssemblyName>Streetview Journey 4</AssemblyName>
+    <NeutralLanguage>en-ZA</NeutralLanguage>
+    <Company />
+    <Product>StreetviewJourney</Product>
+    <Description>A simple library for modifying and using point, panorama and route data for Google Streetview.</Description>
+    <Authors>TrueCP5</Authors>
+    <PackageId>StreetviewJourney</PackageId>
+    <PackageTags>google, streetview, images, video, route, point, lat-long, latitude, longitude, street view</PackageTags>
+    <PackageReleaseNotes>Initial release</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -17,7 +26,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
-    <PackageReference Include="Xabe.FFmpeg" Version="3.5.0" />
+    <PackageReference Include="Xabe.FFmpeg" Version="3.5.1" />
   </ItemGroup>
 
 </Project>
